--- a/Index.html
+++ b/Index.html
@@ -1,12 +1,22 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="UTF-8" />
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
     <title>ComfyCraft Mumbai</title>
-  </head>
-  <body>
-    <h1>Welcome to ComfyCraft Mumbai</h1>
-    <p>We provide customized sofa and mattress solutions at your doorstep in Mumbai.</p>
-    <p>Contact us at: sofaalltype@gmail.com | 9699339429</p>
-  </body>
+</head>
+<body>
+
+    <h1 style="text-align:center; padding-top: 40px;">Welcome to ComfyCraft Mumbai</h1>
+    <p style="text-align:center;">Custom Sofa & Mattress Makers in Mumbai</p>
+
+    <!-- WhatsApp Button Start -->
+    <a href="https://wa.me/919699339429?text=Hi%2C%20I'm%20interested%20in%20custom%20sofa%20or%20mattress.%20Please%20share%20more%20details." 
+       style="position: fixed; bottom: 20px; right: 20px; background-color: #25D366; 
+              color: white; border-radius: 50px; padding: 10px 20px; text-decoration: none; 
+              font-weight: bold; z-index: 1000;">
+        Chat on WhatsApp
+    </a>
+    <!-- WhatsApp Button End -->
+
+</body>
 </html>
