--- a/Index.html
+++ b/Index.html
@@ -1,22 +1,83 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>ComfyCraft Mumbai</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>ComfyCraft Mumbai</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0; padding: 0;
+      background: #f9f9f9;
+      color: #333;
+    }
+    header {
+      background: #1c1c1c;
+      color: #fff;
+      padding: 20px;
+      text-align: center;
+    }
+    section {
+      padding: 20px;
+    }
+    .products {
+      background: #fff;
+      margin: 20px 0;
+      padding: 20px;
+      border-radius: 10px;
+    }
+    footer {
+      background: #1c1c1c;
+      color: #fff;
+      text-align: center;
+      padding: 10px;
+    }
+    .whatsapp-btn {
+      position: fixed;
+      bottom: 20px;
+      right: 20px;
+      background: #25D366;
+      color: #fff;
+      padding: 12px 20px;
+      border-radius: 50px;
+      text-decoration: none;
+      font-weight: bold;
+    }
+  </style>
 </head>
 <body>
 
-    <h1 style="text-align:center; padding-top: 40px;">Welcome to ComfyCraft Mumbai</h1>
-    <p style="text-align:center;">Custom Sofa & Mattress Makers in Mumbai</p>
+  <header>
+    <h1>Welcome to ComfyCraft Mumbai</h1>
+    <p>Custom Sofas & Mattresses | Delivered to Your Home</p>
+  </header>
 
-    <!-- WhatsApp Button Start -->
-    <a href="https://wa.me/919699339429?text=Hi%2C%20I'm%20interested%20in%20custom%20sofa%20or%20mattress.%20Please%20share%20more%20details." 
-       style="position: fixed; bottom: 20px; right: 20px; background-color: #25D366; 
-              color: white; border-radius: 50px; padding: 10px 20px; text-decoration: none; 
-              font-weight: bold; z-index: 1000;">
-        Chat on WhatsApp
-    </a>
-    <!-- WhatsApp Button End -->
+  <section>
+    <h2>About Us</h2>
+    <p>We are Mumbai-based manufacturers of premium sofas and mattresses. All orders are customized as per your needs. We also provide home visits for measurement and material selection.</p>
+  </section>
+
+  <section class="products">
+    <h2>Our Products</h2>
+    <ul>
+      <li>Sofas starting from ₹20,000 depending on material & size</li>
+      <li>Mattresses as per custom material and thickness</li>
+      <li>Home & Office delivery available</li>
+    </ul>
+  </section>
+
+  <section>
+    <h2>Contact Us</h2>
+    <p>Email: sofaalltype@gmail.com</p>
+    <p>Phone: 9699339429</p>
+    <p>Location: Shivaji Nagar, Baiganwadi, Road No. 13/2/40/A-D, Mumbai</p>
+  </section>
+
+  <a class="whatsapp-btn" href="https://wa.me/919699339429" target="_blank">Chat on WhatsApp</a>
+
+  <footer>
+    <p>&copy; 2025 ComfyCraft Mumbai. All rights reserved.</p>
+  </footer>
 
 </body>
 </html>
