--- a/Index.html
+++ b/Index.html
@@ -1,83 +1,114 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
+<!DOCTYPE html><html lang="en"><head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>ComfyCraft Mumbai</title>
   <style>
     body {
+      margin: 0;
       font-family: Arial, sans-serif;
-      margin: 0; padding: 0;
-      background: #f9f9f9;
-      color: #333;
-    }
-    header {
-      background: #1c1c1c;
-      color: #fff;
-      padding: 20px;
-      text-align: center;
-    }
-    section {
-      padding: 20px;
-    }
-    .products {
-      background: #fff;
-      margin: 20px 0;
-      padding: 20px;
-      border-radius: 10px;
-    }
-    footer {
-      background: #1c1c1c;
-      color: #fff;
-      text-align: center;
-      padding: 10px;
-    }
-    .whatsapp-btn {
-      position: fixed;
-      bottom: 20px;
-      right: 20px;
-      background: #25D366;
-      color: #fff;
-      padding: 12px 20px;
-      border-radius: 50px;
-      text-decoration: none;
-      font-weight: bold;
-    }
-  </style>
-</head>
-<body>
+      background-color: #f9f9f9;
+    }header {
+  background-image: url('https://drive.google.com/uc?export=view&id=1t_2B4RJXzwDhKQdt0dsHSCy2RZjK2G-3');
+  background-size: cover;
+  background-position: center;
+  height: 90vh;
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
 
+header h1 {
+  font-size: 3rem;
+  background-color: rgba(0, 0, 0, 0.5);
+  padding: 1rem;
+  border-radius: 10px;
+}
+
+section {
+  padding: 50px 20px;
+  max-width: 1100px;
+  margin: auto;
+}
+
+h2 {
+  text-align: center;
+  color: #333;
+}
+
+.services,
+.gallery {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  gap: 20px;
+  margin-top: 30px;
+}
+
+.service-box,
+.gallery img {
+  background: white;
+  padding: 15px;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  width: 250px;
+  text-align: center;
+}
+
+.gallery img {
+  height: 200px;
+  object-fit: cover;
+}
+
+footer {
+  background: #333;
+  color: white;
+  text-align: center;
+  padding: 20px;
+}
+
+a {
+  color: #ffc107;
+  text-decoration: none;
+}
+
+  </style>
+</head><body>
   <header>
     <h1>Welcome to ComfyCraft Mumbai</h1>
-    <p>Custom Sofas & Mattresses | Delivered to Your Home</p>
-  </header>
-
-  <section>
+  </header>  <section>
     <h2>About Us</h2>
-    <p>We are Mumbai-based manufacturers of premium sofas and mattresses. All orders are customized as per your needs. We also provide home visits for measurement and material selection.</p>
-  </section>
-
-  <section class="products">
-    <h2>Our Products</h2>
-    <ul>
-      <li>Sofas starting from ₹20,000 depending on material & size</li>
-      <li>Mattresses as per custom material and thickness</li>
-      <li>Home & Office delivery available</li>
-    </ul>
-  </section>
-
-  <section>
+    <p>At ComfyCraft Mumbai, we specialize in customized furniture and sofa sets crafted with precision and passion. Located in Shivaji Nagar, Baiganwadi, Mumbai, we take pride in offering high-quality, made-to-order furniture that matches your style and comfort.</p>
+  </section>  <section>
+    <h2>Our Services</h2>
+    <div class="services">
+      <div class="service-box">
+        <h3>Custom Sofas</h3>
+        <p>Get your sofa designed your way – size, color, fabric, everything just how you want!</p>
+      </div>
+      <div class="service-box">
+        <h3>Mattress Solutions</h3>
+        <p>Premium mattress options tailored for comfort, support, and restful sleep.</p>
+      </div>
+      <div class="service-box">
+        <h3>Furniture Repair</h3>
+        <p>We also repair and restore old sofas and furniture to give them a brand new life.</p>
+      </div>
+    </div>
+  </section>  <section>
+    <h2>Photo Gallery</h2>
+    <div class="gallery">
+      <img src="https://drive.google.com/uc?export=view&id=1h7G5AUpmVJrzYoHZBJZTykClntCXqBGg" alt="Sofa 1" />
+      <img src="https://drive.google.com/uc?export=view&id=1wlXvbhVgrAhYpnw0U2OKlI8Yondrz9F1" alt="Sofa 2" />
+      <img src="https://drive.google.com/uc?export=view&id=1ZPM-vmneVNcStOw9llCKP7D2ldRSm9x1" alt="Sofa 3" />
+    </div>
+  </section>  <section>
     <h2>Contact Us</h2>
-    <p>Email: sofaalltype@gmail.com</p>
-    <p>Phone: 9699339429</p>
-    <p>Location: Shivaji Nagar, Baiganwadi, Road No. 13/2/40/A-D, Mumbai</p>
-  </section>
-
-  <a class="whatsapp-btn" href="https://wa.me/919699339429" target="_blank">Chat on WhatsApp</a>
-
-  <footer>
-    <p>&copy; 2025 ComfyCraft Mumbai. All rights reserved.</p>
+    <p><strong>Phone:</strong> <a href="tel:+919892977736">+91 9892977736</a></p>
+    <p><strong>Email:</strong> <a href="mailto:sofaalltype@gmail.com">sofaalltype@gmail.com</a></p>
+    <p><strong>Location:</strong> Shivaji Nagar, Baiganwadi, Road No. 13/2/40/A-D, Mumbai</p>
+  </section>  <footer>
+    &copy; 2025 ComfyCraft Mumbai. All rights reserved.
   </footer>
-
-</body>
-</html>
+</body></html>
